# Kanban

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Kanban_board  Kanban_board.cbp  Makefile  README.md  card.c  card.h  cmake_install.cmake  core.c  core.h  list.c  list.h  main.c  old_render.c  old_render.h  read.c  read.h  render.c  render.h  tasklist.c  tasklist.h
utils/: card.c  card.h  core.c  core.h  form_tools.c  form_tools.h  render.c  render.h  tasklist.c  tasklist.h
